--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@
     <head>
 
     </head>
-    <body>
+    <body style="background-color: red ;text-align: center;">
         <h1>Aniket</h1>
     </body>
 </html>
