--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade d-lg-block d-none" id="QurexModal" tabindex="-1"
+                            <div class="modal fade" id="QurexModal" tabindex="-1"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
@@ -205,7 +205,7 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade d-lg-block d-none" id="WonderModal" tabindex="-1"
+                            <div class="modal fade" id="WonderModal" tabindex="-1"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
@@ -249,7 +249,7 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade d-lg-block d-none" id="JilhaModal" tabindex="-1"
+                            <div class="modal fade" id="JilhaModal" tabindex="-1"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
@@ -293,7 +293,7 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade d-lg-block d-none bg-black" id="AminModal" tabindex="-1"
+                            <div class="modal fade bg-black" id="AminModal" tabindex="-1"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
@@ -340,7 +340,7 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade d-lg-block d-none bg-black" id="LightenModal" tabindex="-1"
+                            <div class="modal fade bg-black" id="LightenModal" tabindex="-1"
                                 aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
