--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                                         <div class="modal-header  position-relative border-0">
                                             <div
                                                 class="button-links position-absolute d-flex  justify-content-around w-100">
-                                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                         href="https://mellifluous-pony-04fb5e.netlify.app/"
                                                         class="text-decoration-none">Live</a></button>
-                                                <button class="btn btn-warning fs-5 pt-1 d-block d-lg-none"><a
+                                                <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
                                                         href="https://github.com/aniketjahagirdar/Quarex-Trainning-Project.git"
                                                         class="text-decoration-none">Code</a></button>
 
@@ -192,10 +192,10 @@
                                     <img src="images/Wonder.png" class="w-100">
                                     <div
                                         class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
-                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                 href="https://cheery-creponne-8fc47d.netlify.app/"
                                                 class="text-decoration-none">Live</a></button>
-                                        <button class="btn btn-warning fs-5 pt-1 d-block d-lg-none"><a
+                                        <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
                                                 href="https://github.com/aniketjahagirdar/Wonder-Tour-project.git"
                                                 class="text-decoration-none">Code</a></button>
 
@@ -213,10 +213,10 @@
                                         <div class="modal-header  position-relative border-0">
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
-                                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                         href="https://cheery-creponne-8fc47d.netlify.app/"
                                                         class="text-decoration-none">Live</a></button>
-                                                <button class="btn btn-warning fs-5 pt-1 d-block d-lg-none"><a
+                                                <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
                                                         href="https://github.com/aniketjahagirdar/Wonder-Tour-project.git"
                                                         class="text-decoration-none">Code</a></button>
 
@@ -237,10 +237,10 @@
                                     <img src="images/Jilha.png" class="w-100">
                                     <div
                                         class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
-                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                 href="https://brilliant-syrniki-7d903b.netlify.app/"
                                                 class="text-decoration-none">Live</a></button>
-                                        <button class="btn btn-warning fs-5 pt-1 d-block d-lg-none"><a
+                                        <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
                                                 href="https://github.com/aniketjahagirdar/Zp-Website.git"
                                                 class="text-decoration-none">Code</a></button>
                                         <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
@@ -257,10 +257,10 @@
                                         <div class="modal-header  position-relative border-0">
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
-                                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://brilliant-syrniki-7d903b.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning fs-5 pt-1 d-block d-lg-none"><a
+                                            <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
                                                     href="https://github.com/aniketjahagirdar/Zp-Website.git"
                                                     class="text-decoration-none">Code</a></button>
 
@@ -281,10 +281,10 @@
                                     <img src="images/Amin.png" class="w-100">
                                     <div
                                         class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
-                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                 href="https://gorgeous-khapse-6162de.netlify.app/"
                                                 class="text-decoration-none">Live</a></button>
-                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                 href="https://github.com/aniketjahagirdar/Amin_Project.git"
                                                 class="text-decoration-none">Live</a></button>
                                         <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
@@ -301,10 +301,10 @@
                                         <div class="modal-header  position-relative border-0">
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
-                                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://gorgeous-khapse-6162de.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://github.com/aniketjahagirdar/Amin_Project.git"
                                                     class="text-decoration-none">Live</a></button>
                                             </div>
@@ -328,10 +328,10 @@
                                     <img src="images/Lighten-img.png" class="w-100">
                                     <div
                                         class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
-                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                             href="https://firstreact-projectbyaniket.netlify.app/"
                                             class="text-decoration-none">Live</a></button>
-                                    <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                    <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                             href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
                                             class="text-decoration-none">Live</a></button>
                                         <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
@@ -348,10 +348,10 @@
                                         <div class="modal-header  position-relative border-0">
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
-                                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://firstreact-projectbyaniket.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
                                                     class="text-decoration-none">Live</a></button>
                                             </div>
