--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
     </div> -->
                     <div class="offcanvas-body">
                         <ul class="nav-link d-lg-flex d-block gap-3 align-items-center mb-0">
-                            <li class="list-unstyled p-1"><a href="#"
+                            <li class="list-unstyled p-1"><a href="#Hero-Section"
                                     class="text-decoration-none text-white fs-5">Home</a></li>
                             <li class="list-unstyled p-1"><a href="#Projects"
                                     class="text-decoration-none text-white fs-5">Project</a></li>
-                            <li class="list-unstyled p-1"><a href=""
+                            <li class="list-unstyled p-1"><a href="About-Skills"
                                     class="text-decoration-none text-white fs-5">Skills</a>
                             </li>
                             <li class="list-unstyled p-1"><a href="#Education"
                                     class="text-decoration-none text-white fs-5">Education</a>
                             </li>
-                            <li class="list-unstyled p-1"><a href="#Contact"
+                            <li class="list-unstyled p-1"><a href="#Footer-Contact"
                                     class="text-decoration-none text-white fs-5 ">Contact</a>
                             </li>
                             </li>
