--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     class="text-decoration-none text-white fs-5">Home</a></li>
                             <li class="list-unstyled p-1"><a href="#Projects"
                                     class="text-decoration-none text-white fs-5">Project</a></li>
-                            <li class="list-unstyled p-1"><a href="About-Skills"
+                            <li class="list-unstyled p-1"><a href="About_Skills"
                                     class="text-decoration-none text-white fs-5">Skills</a>
                             </li>
                             <li class="list-unstyled p-1"><a href="#Education"
@@ -377,7 +377,7 @@
                     </div>
                 </div>
             </Section>
-            <Section id="About-Skills" class="mt-5">
+            <Section id="About_Skills" class="mt-5">
                 <h1 class="text-center fw-light text-white" style="font-size: 10vh;">MySkills</h1>
                 <!-- <div class="container"> -->
                 <div class="skill-carousal owl-carousel owl-theme">
