--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
                 </div>
                 <!-- desktop view navbar -->
                 <ul class="nav-link d-lg-flex d-none gap-3 align-items-center mb-0">
-                    <li class="list-unstyled p-1"><a href="#" class="text-decoration-none text-white fs-5">Home</a></li>
+                    <li class="list-unstyled p-1"><a href="#Hero-Section" class="text-decoration-none text-white fs-5">Home</a></li>
                     <li class="list-unstyled p-1"><a href="#Projects"
                             class="text-decoration-none text-white fs-5">Project</a></li>
-                    <li class="list-unstyled p-1"><a href="" class="text-decoration-none text-white fs-5">Skills</a>
+                    <li class="list-unstyled p-1"><a href="#About_Skills" class="text-decoration-none text-white fs-5">Skills</a>
                     </li>
                     <li class="list-unstyled p-1"><a href="#Education"
                             class="text-decoration-none text-white fs-5">Education</a>
                     </li>
-                    <li class="list-unstyled p-1"><a href="#Contact"
+                    <li class="list-unstyled p-1"><a href="#Footer-Contact"
                             class="text-decoration-none text-white fs-5 ">Contact</a>
                     </li>
                     </li>
