--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrapportfolio.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -21,7 +21,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- <script>
+    <!-- <script>
             tailwind.config = {
               theme: {
                 extend: {
@@ -45,10 +45,12 @@
                 </div>
                 <!-- desktop view navbar -->
                 <ul class="nav-link d-lg-flex d-none gap-3 align-items-center mb-0">
-                    <li class="list-unstyled p-1"><a href="#Hero-Section" class="text-decoration-none text-white fs-5">Home</a></li>
+                    <li class="list-unstyled p-1"><a href="#Hero-Section"
+                            class="text-decoration-none text-white fs-5">Home</a></li>
                     <li class="list-unstyled p-1"><a href="#Projects"
                             class="text-decoration-none text-white fs-5">Project</a></li>
-                    <li class="list-unstyled p-1"><a href="#About_Skills" class="text-decoration-none text-white fs-5">Skills</a>
+                    <li class="list-unstyled p-1"><a href="#About_Skills"
+                            class="text-decoration-none text-white fs-5">Skills</a>
                     </li>
                     <li class="list-unstyled p-1"><a href="#Education"
                             class="text-decoration-none text-white fs-5">Education</a>
@@ -159,8 +161,8 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade" id="QurexModal" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="QurexModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
 
@@ -205,8 +207,8 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade" id="WonderModal" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="WonderModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
 
@@ -249,8 +251,8 @@
                                 </div>
                             </div>
                             <!-- Modal -->
-                            <div class="modal fade" id="JilhaModal" tabindex="-1"
-                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="JilhaModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
                                 <div class="modal-dialog justify-content-center mw-100 d-flex">
                                     <div class="modal-content w-75 position-relative bg-transparent">
 
@@ -258,11 +260,11 @@
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
                                                 <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                    href="https://brilliant-syrniki-7d903b.netlify.app/"
-                                                    class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
-                                                    href="https://github.com/aniketjahagirdar/Zp-Website.git"
-                                                    class="text-decoration-none">Code</a></button>
+                                                        href="https://brilliant-syrniki-7d903b.netlify.app/"
+                                                        class="text-decoration-none">Live</a></button>
+                                                <button class="btn btn-warning fs-5 pt-1 d-block d-lg-flex"><a
+                                                        href="https://github.com/aniketjahagirdar/Zp-Website.git"
+                                                        class="text-decoration-none">Code</a></button>
 
                                             </div>
                                             <button type="button"
@@ -302,11 +304,11 @@
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
                                                 <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                    href="https://gorgeous-khapse-6162de.netlify.app/"
-                                                    class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                    href="https://github.com/aniketjahagirdar/Amin_Project.git"
-                                                    class="text-decoration-none">Live</a></button>
+                                                        href="https://gorgeous-khapse-6162de.netlify.app/"
+                                                        class="text-decoration-none">Live</a></button>
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                        href="https://github.com/aniketjahagirdar/Amin_Project.git"
+                                                        class="text-decoration-none">Live</a></button>
                                             </div>
                                             <button type="button"
                                                 class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
@@ -329,11 +331,11 @@
                                     <div
                                         class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
                                         <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
-                                            href="https://firstreact-projectbyaniket.netlify.app/"
-                                            class="text-decoration-none">Live</a></button>
-                                    <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
-                                            href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
-                                            class="text-decoration-none">Live</a></button>
+                                                href="https://firstreact-projectbyaniket.netlify.app/"
+                                                class="text-decoration-none">Live</a></button>
+                                        <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                                href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
+                                                class="text-decoration-none">Live</a></button>
                                         <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
                                             data-bs-toggle="modal" data-bs-target="#LightenModal"></i>
                                     </div>
@@ -349,11 +351,11 @@
                                             <div
                                                 class="button-links position-absolute d-flex justify-content-around w-100">
                                                 <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                    href="https://firstreact-projectbyaniket.netlify.app/"
-                                                    class="text-decoration-none">Live</a></button>
-                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                    href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
-                                                    class="text-decoration-none">Live</a></button>
+                                                        href="https://firstreact-projectbyaniket.netlify.app/"
+                                                        class="text-decoration-none">Live</a></button>
+                                                <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                        href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
+                                                        class="text-decoration-none">Live</a></button>
                                             </div>
                                             <button type="button"
                                                 class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
@@ -412,13 +414,16 @@
 
                                 <h1 class="fs-1">Bachlore of Science -Information Technology <span class="fs-3">(2019 -
                                         2022)</span></h1>
-                                <h2 class="fs-2">Deogiri College of Maharastra,India</h2><hr>
+                                <h2 class="fs-2">Deogiri College of Maharastra,India</h2>
+                                <hr>
                                 <h1 class="fs-1">12th <span class="fs-3">(2017 -
-                                    2018)</span></h1>
-                            <h2 class="fs-2">Tanwani English School</h2><hr>
-                            <h1 class="fs-1">10th <span class="fs-3">(2015 -
-                                2016)</span></h1>
-                        <h2 class="fs-2">Tanwani English School</h2><hr>
+                                        2018)</span></h1>
+                                <h2 class="fs-2">Tanwani English School</h2>
+                                <hr>
+                                <h1 class="fs-1">10th <span class="fs-3">(2015 -
+                                        2016)</span></h1>
+                                <h2 class="fs-2">Tanwani English School</h2>
+                                <hr>
 
                             </div>
 
@@ -463,7 +468,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
                 integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
                 crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-                <script src="https://cdn.tailwindcss.com"></script>
+            <script src="https://cdn.tailwindcss.com"></script>
             <script>
 
                 $('.skill-carousal').owlCarousel({
