--- a/index.html
+++ b/index.html
@@ -414,16 +414,15 @@
 
                                 <h1 class="fs-1">Bachlore of Science -Information Technology <span class="fs-3">(2019 -
                                         2022)</span></h1>
-                                <h2 class="fs-2">Deogiri College of Maharastra,India</h2>
-                                <hr>
+                                <h2 class="fs-3">Deogiri College of Maharastra,India</h2>
+                                <hr style="color: black !important;">
                                 <h1 class="fs-1">12th <span class="fs-3">(2017 -
                                         2018)</span></h1>
-                                <h2 class="fs-2">Tanwani English School</h2>
-                                <hr>
+                                <h2 class="fs-3">Tanwani English School</h2>
+                                <hr style="color: black !important;">
                                 <h1 class="fs-1">10th <span class="fs-3">(2015 -
                                         2016)</span></h1>
-                                <h2 class="fs-2">Tanwani English School</h2>
-                                <hr>
+                                <h2 class="fs-3">Tanwani English School</h2>
 
                             </div>
 
