--- a/index.html
+++ b/index.html
@@ -415,101 +415,107 @@
                                 <h1 class="fs-1">Bachlore of Science -Information Technology <span class="fs-3">(2019 -
                                         2022)</span></h1>
                                 <h2 class="fs-3">Deogiri College of Maharastra,India</h2>
-                                <hr style="color: black !important;">
+                            </div>
+                            <hr style="color: black !important;">
+                            <div
+                                class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline hover:text-white">
                                 <h1 class="fs-1">12th <span class="fs-3">(2017 -
                                         2018)</span></h1>
                                 <h2 class="fs-3">Tanwani English School</h2>
+                            </div>
+                            <div
+                                class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline hover:text-white">
                                 <hr style="color: black !important;">
                                 <h1 class="fs-1">10th <span class="fs-3">(2015 -
                                         2016)</span></h1>
                                 <h2 class="fs-3">Tanwani English School</h2>
-
                             </div>
 
                         </div>
+
                     </div>
                 </div>
-            </Section>
-            <Section id="Footer-Contact" class=" text-white mt-3">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4">
-                            <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Message</h1>
-                            <form>
-                                Enter Your Name
-                                <input type="text" required class="w-100 p-1 bg-transparent border-bottom  text-black">
-                                Enter your Contact No
-                                <input type="number" required
-                                    class="w-100 p-1 bg-transparent border-bottom  text-black">
-                                Enter your EmailId
-                                <input type="text" required class="w-100 p-1 bg-transparent border-bottom  text-black">
-                                Enter your Message
-                                <textarea rows="3" cols="10" required
-                                    class="p-1 w-100 h-auto bg-transparent border-bottom text-black"></textarea>
-                                <button class="btn fs-6 btn-warning w-100">Submit</button>
-                                <!-- <input type="text" class="w-100 p-3 bg-transparent border opacity-75" > -->
+        </div>
+    </Section>
+    <Section id="Footer-Contact" class=" text-white mt-3">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Message</h1>
+                    <form>
+                        Enter Your Name
+                        <input type="text" required class="w-100 p-1 bg-transparent border-bottom  text-black">
+                        Enter your Contact No
+                        <input type="number" required class="w-100 p-1 bg-transparent border-bottom  text-black">
+                        Enter your EmailId
+                        <input type="text" required class="w-100 p-1 bg-transparent border-bottom  text-black">
+                        Enter your Message
+                        <textarea rows="3" cols="10" required
+                            class="p-1 w-100 h-auto bg-transparent border-bottom text-black"></textarea>
+                        <button class="btn fs-6 btn-warning w-100">Submit</button>
+                        <!-- <input type="text" class="w-100 p-3 bg-transparent border opacity-75" > -->
 
 
-                            </form>
-                        </div>
-                    </div>
+                    </form>
                 </div>
+            </div>
+        </div>
 
-            </Section>
-
-
-
-
-
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-                integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-                crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-                integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-                crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-            <script src="https://cdn.tailwindcss.com"></script>
-            <script>
-
-                $('.skill-carousal').owlCarousel({
-                    loop: true,
-                    margin: 10,
-                    nav: false,
-                    items: 5,
-                    // dots:false,
-                    autoplay: true,
-                    responsive: {
-                        0: {
-                            items: 2
-                        },
-                        600: {
-                            items: 4
-                        },
-                        1000: {
-                            items: 5
-                        },
-
-                    }
-                })
-                $('.LightenReact-carousal').owlCarousel({
-                    loop: true,
-                    margin: 0,
-                    autoplayTimeout: 5000,
-                    smartSpeed: 800,
-                    nav: false,
-                    items: 1,
-                    // dots:false,
-                    autoplay: true,
-                    responsive: {
+    </Section>
 
 
-                    }
-                })
 
 
-            </script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+
+        $('.skill-carousal').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: false,
+            items: 5,
+            // dots:false,
+            autoplay: true,
+            responsive: {
+                0: {
+                    items: 2
+                },
+                600: {
+                    items: 4
+                },
+                1000: {
+                    items: 5
+                },
+
+            }
+        })
+        $('.LightenReact-carousal').owlCarousel({
+            loop: true,
+            margin: 0,
+            autoplayTimeout: 5000,
+            smartSpeed: 800,
+            nav: false,
+            items: 1,
+            // dots:false,
+            autoplay: true,
+            responsive: {
+
+
+            }
+        })
+
+
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
