--- a/index.html
+++ b/index.html
@@ -405,23 +405,23 @@
 
             </Section>
             <Section id="Education">
-                <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Education</h1>
+                <h1 class="text-center fw-light" style="font-size: 10vh;">Education</h1>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
-                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline hover:text-white w-100">
+                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline w-100" style="color: aquamarine;">
                                 <h1 class="fs-1">Bachlore of Science -Information Technology <span class="fs-3">(2019 -
                                         2022)</span></h1>
                                 <h2 class="fs-3">Deogiri College of Maharastra,India</h2>
                             </div>
                             <hr style="color: black !important;">
-                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline hover:text-white w-100">
+                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline w-100" style="color: aquamarine;">
                                 <h1 class="fs-1">12th <span class="fs-3">(2017 -
                                         2018)</span></h1>
                                 <h2 class="fs-3">Tanwani English School</h2>
                             </div>
                             <hr style="color: black !important;">
-                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline hover:text-white w-100">
+                            <div class="Education-infomation ps-lg-3 shadow cursor-none border-black transition duration-1000 btn btn-outline w-100" style="color: aquamarine;">
                                 <h1 class="fs-1">10th <span class="fs-3">(2015 -
                                         2016)</span></h1>
                                 <h2 class="fs-3">Tanwani English School</h2>
