--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
             </Section>
             <Section id="Education">
-                <h1 class="text-center fw-light" style="font-size: 10vh;">Education</h1>
+                <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Education</h1>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
