--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             <Section id="Projects" class="h-90vh">
                 <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Projects</h1>
                 <!-- <div class="w-100 overflow-auto"> -->
+                    <div class="container">
                 <div class="row justify-content-center mt-3">
                     <div class="col-lg-4 ps-0 pe-0 mt-3">
                         <div class="img-div position-relative">
@@ -165,6 +166,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </Section>
             <Section id="About_Skills" class="mt-5">
