--- a/index.html
+++ b/index.html
@@ -120,53 +120,54 @@
                     </div>
                 </div>
             </Section>
-            <Section id="Projects" class="h-90vh">
+            <Section id="Projects">
                 <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Projects</h1>
                 <!-- <div class="w-100 overflow-auto"> -->
-                    <div class="container">
-                <div class="row justify-content-center mt-3">
-                    <div class="col-lg-4 ps-0 pe-0 mt-3">
-                        <div class="img-div position-relative">
-                            <img src="images/Lighten-img.png" class="w-100">
-                            <div class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
-                                <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
-                                        href="https://firstreact-projectbyaniket.netlify.app/"
-                                        class="text-decoration-none">Live</a></button>
-                                <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 " data-bs-toggle="modal"
-                                    data-bs-target="#LightenModal"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade bg-black" id="LightenModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog justify-content-center mw-100 d-flex">
-                            <div class="modal-content w-75 position-relative bg-transparent">
-
-                                <div class="modal-header  position-relative border-0">
-                                    <div class="button-links position-absolute d-flex justify-content-around w-100">
-                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                href="https://firstreact-projectbyaniket.netlify.app/"
-                                                class="text-decoration-none">Live</a></button>
-                                        <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
-                                                href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
-                                                class="text-decoration-none">Live</a></button>
-                                    </div>
-                                    <button type="button"
-                                        class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
-                                        data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x fs-3"></i></button>
-                                </div>
-                                <div class="modal-body">
-
-                                    <div class="LightenReact-carousal">
-                                        <img src="images/LightenFull1-Page.png" alt=""/>
-
-                                    </div>
+                <div class="container">
+                    <div class="row justify-content-center mt-3">
+                        <div class="col-lg-4 ps-0 pe-0 mt-3">
+                            <div class="img-div position-relative">
+                                <img src="images/Lighten-img.png" class="w-100">
+                                <div class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
+                                    <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                            href="https://firstreact-projectbyaniket.netlify.app/"
+                                            class="text-decoration-none">Live</a></button>
+                                    <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
+                                        data-bs-toggle="modal" data-bs-target="#LightenModal"></i>
                                 </div>
                             </div>
                         </div>
+                        <!-- Modal -->
+                        <div class="modal fade bg-black" id="LightenModal" tabindex="-1"
+                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog justify-content-center mw-100 d-flex">
+                                <div class="modal-content w-75 position-relative bg-transparent">
+
+                                    <div class="modal-header  position-relative border-0">
+                                        <div class="button-links position-absolute d-flex justify-content-around w-100">
+                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                    href="https://firstreact-projectbyaniket.netlify.app/"
+                                                    class="text-decoration-none">Live</a></button>
+                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                    href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
+                                                    class="text-decoration-none">Live</a></button>
+                                        </div>
+                                        <button type="button"
+                                            class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
+                                            data-bs-dismiss="modal" aria-label="Close"><i
+                                                class="bi bi-x fs-3"></i></button>
+                                    </div>
+                                    <div class="modal-body">
+
+                                        <div class="LightenReact-carousal">
+                                            <img src="images/LightenFull1-Page.png" alt="" />
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
                 </div>
             </Section>
             <Section id="About_Skills" class="mt-5">
