--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                     </div>
                                     <div class="modal-body">
 
-                                        <div class="LightenReact-carousal">
+                                        <div class="LightenReact">
                                             <img src="images/LightenFull1-Page.png" alt="" />
 
                                         </div>
