--- a/index.html
+++ b/index.html
@@ -148,14 +148,12 @@
                                             <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://firstreact-projectbyaniket.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
-                                            
-                                        
-                                        <button type="button"
-                                            class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
-                                            data-bs-dismiss="modal" aria-label="Close"><i
-                                                class="bi bi-x fs-3"></i></button>
+                                            <button type="button"
+                                                class=" bg-warning me-3 end-0 opacity-100 d-flex"
+                                                data-bs-dismiss="modal" aria-label="Close"><i
+                                                    class="bi bi-x fs-3"></i></button>
+                                        </div>
                                     </div>
-                                </div>
                                     <div class="modal-body">
 
                                         <div class="LightenReact">
