--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div class="modal-content w-75 position-relative bg-transparent">
 
                                     <div class="modal-header  position-relative border-0">
-                                        <div class="button-links position-absolute d-flex justify-content-around w-100">
+                                        <div class="button-links position-absolute d-flex w-100">
                                             <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://firstreact-projectbyaniket.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
