--- a/index.html
+++ b/index.html
@@ -144,15 +144,18 @@
                                 <div class="modal-content w-75 position-relative bg-transparent">
 
                                     <div class="modal-header  position-relative border-0">
-                                        <div class="button-links position-absolute d-flex w-100">
+                                        <div class="button-links position-absolute d-flex justify-content-around w-100">
                                             <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
                                                     href="https://firstreact-projectbyaniket.netlify.app/"
                                                     class="text-decoration-none">Live</a></button>
-                                            <button type="button"
-                                                class=" bg-warning me-3 end-0 opacity-100 d-flex"
-                                                data-bs-dismiss="modal" aria-label="Close"><i
-                                                    class="bi bi-x fs-3"></i></button>
+                                            <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                    href="https://github.com/aniketjahagirdar/Lighten-ReactProject.git"
+                                                    class="text-decoration-none">Code</a></button>
                                         </div>
+                                        <button type="button"
+                                            class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
+                                            data-bs-dismiss="modal" aria-label="Close"><i
+                                                class="bi bi-x fs-3"></i></button>
                                     </div>
                                     <div class="modal-body">
 
