--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-4 ps-0 pe-0 mt-3">
+                            <div class="img-div position-relative">
+                                <img src="images/ShivShahiCab.png" class="w-100">
+                                <div class="img-hover-content position-absolute top-0 h-100 w-100 text-center d-none">
+                                    <button class="btn btn-warning d-lg-none d-block fs-5 pt-1"><a
+                                            href="https://firstreact-projectbyaniket.netlify.app/"
+                                            class="text-decoration-none">Live</a></button>
+                                    <i class="bi bi-search d-none d-lg-block btn btn-warning fs-4 "
+                                        data-bs-toggle="modal" data-bs-target="#ShivShaiCabModal"></i>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Modal -->
                         <div class="modal fade bg-black" id="LightenModal" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -167,6 +179,36 @@
                                 </div>
                             </div>
                         </div>
+                          <!-- Modal -->
+                          <div class="modal fade bg-black" id="ShivShaiCabModal" tabindex="-1"
+                          aria-labelledby="exampleModalLabel" aria-hidden="true">
+                          <div class="modal-dialog justify-content-center mw-100 d-flex">
+                              <div class="modal-content w-75 position-relative bg-transparent">
+
+                                  <div class="modal-header  position-relative border-0">
+                                      <div class="button-links position-absolute d-flex justify-content-around w-100">
+                                          <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                  href="https://www.shivshahicab.com/"
+                                                  class="text-decoration-none">Live</a></button>
+                                          <button class="btn btn-warning d-lg-flex d-block fs-5 pt-1"><a
+                                                  href="https://github.com/aniketjahagirdar/ShivShaiCab.git"
+                                                  class="text-decoration-none">Code</a></button>
+                                      </div>
+                                      <button type="button"
+                                          class=" position-absolute bg-warning me-3 end-0 opacity-100 d-flex"
+                                          data-bs-dismiss="modal" aria-label="Close"><i
+                                              class="bi bi-x fs-3"></i></button>
+                                  </div>
+                                  <div class="modal-body">
+
+                                      <div class="LightenReact">
+                                          <img src="images/ShivShahiCab FullPage.png" alt="" />
+
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
                     </div>
                 </div>
             </Section>
