--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <h1 class="text-center fw-light text-white" style="font-size: 10vh;">Projects</h1>
                 <!-- <div class="w-100 overflow-auto"> -->
                 <div class="container">
-                    <div class="row justify-content-center mt-3">
+                    <div class="row justify-content-between mt-3">
                         <div class="col-lg-4 ps-0 pe-0 mt-3">
                             <div class="img-div position-relative">
                                 <img src="images/Lighten-img.png" class="w-100">
